--- a/package.json
+++ b/package.json
@@ -9,16 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.4",
+    "@ant-design/icons": "^4.7.0",
+    "@tanstack/react-query": "^4.12.0",
+    "antd": "^4.22.6",
+    "antd-img-crop": "^4.2.4",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.1",
+    "firebase": "^9.11.0",
+    "js-cookie": "^3.0.1",
+    "next": "^12.3.0",
+    "next-auth": "^4.10.3",
+    "query-string": "^7.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "swr": "^1.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
+    "@types/lodash": "^4.14.184",
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "lodash": "^4.17.21",
     "typescript": "4.7.4"
   }
 }
