--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-NEXT_PUBLIC_API_URL=http://localhost:8080/api/v1
+NEXT_PUBLIC_API_URL=https://20.205.138.140/api/v1
+NEXT_PUBLIC_GEOAPIFY_URL=https://api.geoapify.com/v1
+NEXT_PUBLIC_GEOAPIFY_KEY=079f6c0fdcca4313841d1fd53a153a17
+GOOGLE_ID=288127278730-uqn7mn5k84m5mkm2dhaahhqmq7034crg.apps.googleusercontent.com
+GOOGLE_SECRET=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
