--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "firebase": "^9.11.0",
     "js-cookie": "^3.0.1",
     "next": "^12.3.0",
-    "next-auth": "^4.10.3",
+    "next-auth": "4.15.1",
     "query-string": "^7.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-use-websocket": "^4.2.0",
+    "socket.io-client": "^4.5.4",
     "swr": "^1.3.0",
     "xlsx": "^0.18.5"
   },
